<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/area_name_profile"
        android:layout_width="match_parent"
        android:layout_height="@dimen/sixty"
        android:text="@string/menu"
        android:textSize="@dimen/twenty"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/twenty"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        android:background="@color/darkGreen"
        style="@android:style/TextAppearance.DeviceDefault.Medium"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_profile_entry"
        android:textColor="@color/white"
        android:paddingTop="@dimen/ten"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        style="@android:style/TextAppearance.DeviceDefault.Small"/>



    <TextView
        android:id="@+id/deo_name_profile"
        style="@android:style/TextAppearance.DeviceDefault.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        android:paddingTop="@dimen/eighty"
        android:text="@string/deo_name"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/state_profile"
        style="@android:style/TextAppearance.DeviceDefault.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        android:paddingTop="@dimen/ten"
        android:text="@string/state"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/district_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/district"
        android:textColor="@color/white"
        android:paddingTop="@dimen/five"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        style="@android:style/TextAppearance.DeviceDefault.Small"/>

    <TextView
        android:id="@+id/facility_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/facility"
        android:textColor="@color/white"
        android:paddingTop="@dimen/five"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        style="@android:style/TextAppearance.DeviceDefault.Small"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/one"
        android:background="@color/white"
        android:layout_margin="@dimen/twenty"/>
    <TextView
        android:id="@+id/sync_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sync"
        android:textColor="@color/white"
        android:paddingTop="@dimen/five"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        style="@android:style/TextAppearance.DeviceDefault.Small"/>

    <TextView
        android:id="@+id/logout_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:paddingTop="@dimen/five"
        android:paddingLeft="@dimen/twenty"
        android:paddingRight="@dimen/twenty"
        style="@android:style/TextAppearance.DeviceDefault.Small"/>

</LinearLayout>
