<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/twenty">

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:text="@string/confirmation" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5sp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/facility"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/thirty"
            android:text="@string/facility" />

        <TextView
            android:id="@+id/month_selection"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five"
            android:text="@string/selected_month" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten"
            android:textColor="@color/black"
            android:textSize="@dimen/fourty" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/ten"
            android:layout_marginTop="@dimen/fifteen"
            android:layout_weight="2">

            <Button
                android:id="@+id/cancel_btn"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fourty"
                android:layout_weight="1"
                android:background="@color/red"
                android:text="@string/cancel"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/submit_btn"
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fourty"
                android:layout_marginLeft="@dimen/five"
                android:layout_weight="1"
                android:background="@color/green"
                android:text="@string/submit"
                android:textAllCaps="false" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>