<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scsl_bg">

    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways">

        <TextView
            android:id="@+id/toolbar_title"
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/activity_title_login"
            android:textColor="@color/white" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                android:padding="@dimen/thirty">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/login_logo_desc"
                    android:src="@drawable/scsl_mobile_login_icon"
                    android:tint="@color/cardview_dark_background" />

                <EditText
                    android:id="@+id/username_et"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginTop="@dimen/twenty"
                    android:background="@android:drawable/editbox_background_normal"
                    android:gravity="center"
                    android:text=""
                    android:textCursorDrawable="@null"
                    android:hint="@string/username"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/password_et"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginTop="@dimen/ten"
                    android:background="@android:drawable/editbox_background_normal"
                    android:gravity="center"
                    android:textCursorDrawable="@null"
                    android:hint="@string/password"
                    android:text=""
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/login_btn"
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/fourty"
                    android:layout_marginTop="@dimen/twenty"
                    android:background="@color/darkBlue"
                    android:text="@string/login"
                    android:textColor="@color/white" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>